2011-01-05  Xianzhu Wang  <wangxianzhu@google.com>

        Reviewed by David Levin.

        Implement RemoteFontStream's skip behavior (in FontCustomPlatformData.cpp)
        https://bugs.webkit.org/show_bug.cgi?id=51736

        No new tests. This change has potential effect on @font-face CSS feature
        on ports using Skia. Tested on Chromium that this change won't break
        fast/css/font-face-remote.html. This change can make the test pass on
        other ports using Skia.

        * platform/graphics/skia/FontCustomPlatformData.cpp:
        (WebCore::RemoteFontStream::read):

2011-01-05  Helder Correia  <helder@sencha.com>

        Reviewed by Simon Fraser.

        Shadows are not drawn when filling a rect with a gradient fillStyle on Mac and Chromium-Mac
        https://bugs.webkit.org/show_bug.cgi?id=51869

        GraphicsContext::fillRect(const FloatRect&) is clipping to the rect.
        The shadow is being drawn, but getting clipped to the rect being filled.
        The solution is to draw the gradient into a CGLayer (when a shadow is
        required), then render the layer to the GraphicsContext.

        This patch also fixes:
        canvas/philip/tests/2d.shadow.gradient.alpha.html
        canvas/philip/tests/2d.shadow.gradient.basic.html
        canvas/philip/tests/2d.shadow.gradient.transparent.2.html

        Test: fast/canvas/canvas-fillRect-gradient-shadow.html

        * platform/graphics/Gradient.h:
        * platform/graphics/cg/GradientCG.cpp:
        (WebCore::Gradient::paint):
        * platform/graphics/cg/GraphicsContextCG.cpp:
        (WebCore::GraphicsContext::fillRect):

2011-01-05  Steve Falkenburg  <sfalken@apple.com>

        Reviewed by Darin Adler.

        Debug and Release builds on Windows clobber each other
        https://bugs.webkit.org/show_bug.cgi?id=49185

        Changes the structure of WebKitBuild build products directory so we